test(modules): 调整分层架构契约与回归测试